[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/assets/Props/Cauldron/Chaudron.png" type="Texture" id=1]
[ext_resource path="res://src/props/Cauldron.gd" type="Script" id=2]
[ext_resource path="res://src/assets/WhiteDot.png" type="Texture" id=3]
[ext_resource path="res://src/assets/Props/Cauldron/Chaudron_fond.png" type="Texture" id=4]
[ext_resource path="res://src/assets/Props/Cauldron/Chaudron_flammes.png" type="Texture" id=5]
[ext_resource path="res://src/assets/Props/Cauldron/Chaudron_soupe.png" type="Texture" id=6]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.303226, 0.535484, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 20, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, -98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.05
scale_random = 0.1
color = Color( 0.741176, 0.392157, 0.392157, 1 )
color_ramp = SubResource( 4 )

[sub_resource type="CircleShape2D" id=2]
radius = 64.0

[node name="Cauldron" type="Node2D"]
script = ExtResource( 2 )

[node name="Visuals" type="Node2D" parent="."]

[node name="Highlight" type="Sprite" parent="Visuals"]
position = Vector2( -1, -69 )
scale = Vector2( 0.37, 0.37 )
texture = ExtResource( 4 )

[node name="CauldronSprite" type="Sprite" parent="Visuals"]
position = Vector2( 0, -72 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="Bubbles" type="Particles2D" parent="Visuals"]
position = Vector2( 0, -112 )
amount = 5
speed_scale = 0.2
process_material = SubResource( 1 )
texture = ExtResource( 3 )

[node name="ChaudronFlammes" type="Sprite" parent="Visuals"]
position = Vector2( 0, -56 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="ChaudronSoupe" type="Sprite" parent="Visuals"]
position = Vector2( 1, -66 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="PlayerPosition" type="Position2D" parent="."]
position = Vector2( 72, -96 )

[node name="Dots" type="Node2D" parent="."]
position = Vector2( 0, -56 )

[node name="WhiteDot" type="Sprite" parent="Dots"]
position = Vector2( -16, -0.300018 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="WhiteDot2" type="Sprite" parent="Dots"]
position = Vector2( -1.90735e-06, -0.300018 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="WhiteDot3" type="Sprite" parent="Dots"]
position = Vector2( 16, -0.300018 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="CookingTimer" type="Timer" parent="."]

[connection signal="selected" from="." to="." method="_on_Cauldron_selected"]
[connection signal="timeout" from="CookingTimer" to="." method="_on_CookingTimer_timeout"]
